# XuPy

./: .coverage  .gitignore  LICENSE  README.md  custom_install.py  docs.md  pyproject.toml  requirements.txt  setup.py  test_xupy.py
.github/workflows/: publish.yml  python-test.yaml
docs/: Makefile  requirements.txt
docs/source/: api.md  changelog.md  conf.py  index.md  intro.md
docs/source/autoapi/xupy/: index.rst
docs/source/autoapi/xupy/__version__/: index.rst
docs/source/autoapi/xupy/_core/: index.rst
docs/source/autoapi/xupy/_cupy_install/: index.rst
docs/source/autoapi/xupy/_cupy_install/__check_availability__/: index.rst
docs/source/autoapi/xupy/_cupy_install/__install_cupy__/: index.rst
docs/source/autoapi/xupy/_typings/: index.rst
test/: test_core.py  test_cpu_memory_context.py  test_ma_core.py  test_ma_extras.py  test_xupy.py
xupy/: __init__.py  _core.py  _typings.py  example.py  typings.py
xupy/_cupy_install/: __check_availability__.py  __install_cupy__.py
xupy/ma/: __init__.py  core.py  extras.py
