[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "XuPy"
version = "0.1.0"
description = "... Python package"
authors = [
    { name = "Pietro Ferraiuolo", email = "pietro.ferraiuolo@inaf.it" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    'numpy',
    'cupy-cuda12x'
]
