[project]
name = "XuPy"
version = "1.1.0"
description = "Masked Arrays made simple for CuPy"
authors = [
    { name = "Pietro Ferraiuolo", email = "pietro.ferraiuolo@inaf.it" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    'numpy',
]

[project.urls]
Homepage = "https://github.com/pietroferraiuolo/XuPy"

[tool.setuptools]
packages = ["xupy"]
